[package]
name = "protoc-grpcio"
version = "0.3.1"
authors = ["Matt Pelland <matt@pelland.io>"]
license = "Apache-2.0"
keywords = ["compiler", "grpc", "protobuf", "grpc-rs"]
repository = "https://github.com/mtp401/protoc-grpcio"
documentation = "https://docs.rs/protoc-grpcio"
description = """
API for programatically invoking the grpcio (grpc-rs) gRPC compiler
"""

[dependencies]
grpcio-compiler = "0.4"
failure = "0.1"
tempfile = "3.0"
protobuf = "2.2"
protobuf-codegen = "2.2"
protoc = "2.2"
